[package]
name = "aunema"
version = "0.0.1"
authors = ["enfipy"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"
smart-default = "0.5.2"
json = "*"
envy = "0.4"
validator = "0.8.0"
validator_derive = "0.8.0"
futures = "0.1.26"

r2d2_postgres = "0.14.0"
postgres = { version = "0.15", features = ["with-uuid"] }
postgres-derive = "0.3"

uuid = { version = "0.5", features = ["serde", "v4"] }
chrono = "0.4"

actix-web = "1.0.0"
sendgrid = "0.8.1"
telebot = "0.3.0"

[[bin]]
name = "aunema"
path = "src/main.rs"
