[package]
name = "aunema"
version = "0.0.1"
authors = ["enfipy"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"
smart-default = "0.5.2"
json = "*"
envy = "0.4"
validator = "0.8.0"
validator_derive = "0.8.0"
reqwest = "0.9.17"
futures = "0.1.27"
chrono = "0.4"
failure = "0.1.5"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
serde-enum-derive = "0.0.1"

uuid = { version = "0.5", features = ["serde", "v4"] }

r2d2_postgres = "0.14.0"
postgres = { version = "0.15", features = ["with-uuid"] }
postgres-protocol = "0.3.0"

actix = "0.8"
actix-web = "1.0.0"
sendgrid = "0.8.1"
carapax = "0.2"

[[bin]]
name = "aunema"
path = "src/main.rs"
